Prometheus/prometheus-healthcheck.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-healthz-route
  namespace: monitoring
spec:
  parentRefs:
  - name: prometheus-gateway
    namespace: monitoring
  rules:
  - matches:
    - path:
        type: Exact
        value: /healthz
    filters:
    - type: ExtensionRef
      extensionRef:
        name: prometheus-healthz
        group: gateway.kgateway.dev
        kind: DirectResponse
